vendor: Add sysfs permissions for pocket bridge
Change-Id: I7a7de23c2d92b12a7a2b73d0a30f4bcc2fbb8676
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/prebuilt/common/etc/init/lineage-system.rc
+++ b/prebuilt/common/etc/init/lineage-system.rc
@@ -14,3 +14,7 @@ service bugreport /system/bin/dumpstate -d -p -z
     oneshot
     disabled
     keycodes 114 115 116
+
+on boot
+    # allow system to communicate pocket state
+    chown system system /sys/kernel/pocket_judge/inpocket
